tests/fixtures/compile_errors/numeric_capacity_mismatch/u64_pos.fe
contract Foo:
    pub def bar() -> u64:
        return u64(18446744073709551616)